CASMINST-4794: Correct misspellings in output strings, code comments, etc
(cherry picked from commit ea39a2b9ec13235e0bdde459b67c3c760c518b2e)

--- a/hugo/layouts/partials/logo.html
+++ b/hugo/layouts/partials/logo.html
@@ -5,5 +5,5 @@
   </style>
 
   <text x="40" y="35" class="heavy">CSI</text>
-  <text x="55" y="55" class="small">Cray Site Initilizer</text>
+  <text x="55" y="55" class="small">Cray Site Initializer</text>
 </svg>
